assert-struct/tests/snapshots/ranges__range_pattern.snap
---
source: assert-struct/tests/ranges.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/ranges_errors/range_pattern.rs:13:14
   |
13 |         age: 18..=65,
   |              ^^^^^^^ got 75
